--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="Gaseosas.html" data-categoria="libros"
               >Gaseosas <i class="fas fa-angle-right"></i
             ></a>
-            <a href="licores.html" data-categoria="ropa-y-accesorios"
+            <a href="Licores.html" data-categoria="ropa-y-accesorios"
               >Licores <i class="fas fa-angle-right"></i
             ></a>
           </div>
