--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                   <i class="fas fa-arrow-left"></i>Regresar
                 </button>
                 <h3 class="subtitulo">Licores</h3>
-                <a href="licores.html">Aguila</a>
-                <a href="licores.html">Poker</a>
-                <a href="licores.html">Ron añejo</a>
+                <a href="Licores.html">Aguila</a>
+                <a href="Licores.html">Poker</a>
+                <a href="Licores.html">Ron añejo</a>
               </div>
 
               <div class="banner-subcategoria">
