--- a/index.html
+++ b/index.html
@@ -197,20 +197,20 @@
       <h3>Compra los mejores Licores</h3>
       <ul>
         <li>
-          <a href="licores.html">
+          <a href="Licores.html">
             <img src="Imagenes/11.png" alt="" />
           </a>
-          <a href="licores.html">
+          <a href="Licores.html">
             <img src="Imagenes/12.png" alt="" />
           </a>
-          <a href="licores.html">
+          <a href="Licores.html">
             <img src="Imagenes/13.jpg" alt="" />
           </a>
-          <a href="licores.html">
+          <a href="Licores.html">
             <img src="Imagenes/14.jpg" alt="" />
         </li>
       </ul>
-      <a href="licores.html" >Compra ahora</a>
+      <a href="Licores.html" >Compra ahora</a>
     </div>
 
     <div class="productos_principal" id="productos_principal-mekatos">
